<resources>
    <string name="app_name">GardenMate</string>
    <string name="title_log_in">Log In</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="btn_login">Log In</string>
    <string name="sign_up_here">No Account? Sign Up Here!</string>

    <string name="title_register">Register Account</string>
    <string name="reg_email">Email:</string>
    <string name="reg_password">Password:</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="log_in_here">Already have an Account? Log In Here!</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>