<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4FFC5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_register"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/reg_email"
                android:background="@drawable/et_design"
                android:padding="10dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/reg_password"
                android:inputType="textPassword"
                android:background="@drawable/et_design"
                android:padding="10dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/et_design"
                android:padding="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_gravity="center"
                android:text="@string/btn_sign_up" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/log_in_here"
                android:textSize="12sp" />
        </LinearLayout>
</LinearLayout>