<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4FFC5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_log_in"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/login_email"
                android:background="@drawable/et_design"
                android:padding="10dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/login_password"
                android:background="@drawable/et_design"
                android:padding="10dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/et_design"
                android:padding="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_gravity="center"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sign_up_here"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>